--- a/backend/core/pytest.ini
+++ b/backend/core/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = core.config.development.settings
-python_files = test.py tests.py test_*.py tests_*.py *_test.py *_tests.py
+DJANGO_SETTINGS_MODULE=config.settings.development
+python_files=test.py tests.py test_*.py tests_*.py *_test.py *_tests.py
