--- a/Front/sage/package.json
+++ b/Front/sage/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
