refactor: refactorando to better use the djoser library. Adding djoser configurations, removing unnecessary files and adding email configurations.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,16 @@ DB_USER='Database Username'
 DB_PASSWORD='Database Password'
 DB_HOST='Database Host'
 DB_PORT='Database Port'
+
+# Email Configurations
+EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER='Your Email'
+EMAIL_HOST_PASSWORD='Your Password'
+
+# Djoser Configurations
+DJOSER_EMAIL_FRONTEND_PROTOCOL='http',
+DJOSER_EMAIL_FRONTEND_DOMAIN='localhost:5173'
+DJOSER_EMAIL_FRONTEND_SITE_NAME='FinanSee'
