--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,7 @@ DEBUG=False
 SECRET_KEY='secret_key'
 ALLOWED_HOSTS='localhost, 127.0.0.1'
 CORS_ALLOWED_ORIGINS='http://example.com, https://sub.example.com, http://localhost:8080, http://127.0.0.1:9000'
+CORS_ALLOW_ALL_ORIGINS=False
 
 USE_POSTGRESQL=False
 
