--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,8 @@ ALLOWED_HOSTS='localhost, 127.0.0.1'
 CORS_ALLOWED_ORIGINS='http://example.com, https://sub.example.com, http://localhost:8080, http://127.0.0.1:9000'
 CORS_ALLOW_ALL_ORIGINS=False
 
+BACKEND_URL='http://localhost:8000'
+
 USE_POSTGRESQL=False
 
 # Database Configurations
