--- a/backend/apache/my-vhost.conf
+++ b/backend/apache/my-vhost.conf
@@ -1,19 +1,32 @@
 # /apache/my-vhost.conf
 
-LoadModule proxy_module modules/mod_proxy.so
-LoadModule proxy_http_module modules/mod_proxy_http.so
-LoadModule rewrite_module modules/mod_rewrite.so
+# Garanta que esta linha está no topo, fora de qualquer VirtualHost
+SSLSessionCache "shmcb:/run/httpd/ssl_scache(512000)"
 
+# Redireciona todo o tráfego HTTP (porta 80) para HTTPS
 <VirtualHost *:80>
     ServerName localhost
-    ServerAdmin webmaster@localhost
-    DocumentRoot /usr/local/apache2/htdocs
+    Redirect permanent / https://localhost/
+</VirtualHost>
+
+# Configuração do HTTPS (porta 443) com Proxy Reverso
+<VirtualHost *:443>
+    ServerName localhost
+    
+    SSLEngine on
+    SSLCertificateFile "/usr/local/apache2/conf/ssl/server.crt"
+    SSLCertificateKeyFile "/usr/local/apache2/conf/ssl/server.key"
+    
+    SSLProxyEngine on
+    ProxyPreserveHost On
+
+    # Não envia requisições /static/ para o backend Django
+    ProxyPass /static !
+
+    # Envia todo o resto para o backend Django
+    ProxyPass / http://web:8000/
+    ProxyPassReverse / http://web:8000/
 
     ErrorLog /proc/self/fd/2
     CustomLog /proc/self/fd/1 common
-
-    RewriteEngine On
-    RewriteRule "^/static/.*$" - [L]
-    RewriteRule "^/(.*)$" "http://web:8000/$1" [P,L]
-    ProxyPassReverse / http://web:8000/
 </VirtualHost>
