--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -18,22 +18,24 @@ services:
     volumes:
       - .:/app
       - static_volume:/app/core/staticfiles
-    ports:
-      - "8000:8000"
     env_file:
       - .env
+    ports:
+      - "8000:8000"
     depends_on:
       - db
 
   apache:
-    image: httpd:2.4-alpine
+    image: httpd:2.4
     restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - static_volume:/usr/local/apache2/htdocs/static
       - ./apache/httpd.conf:/usr/local/apache2/conf/httpd.conf
       - ./apache/my-vhost.conf:/usr/local/apache2/conf.d/my-vhost.conf
+      - ./apache/ssl:/usr/local/apache2/conf/ssl
     depends_on:
       - web
 
