build: Adding configuration for DNS validation.

--- a/backend/apache/my-vhost.conf
+++ b/backend/apache/my-vhost.conf
@@ -20,8 +20,9 @@ SSLSessionCache "shmcb:/run/httpd/ssl_scache(512000)"
     SSLProxyEngine on
     ProxyPreserveHost On
 
-    # Não envia requisições /static/ para o backend Django
+    # Não envia requisições para o backend Django
     ProxyPass /static !
+    ProxyPass /.well-known !
 
     # Envia todo o resto para o backend Django
     ProxyPass / http://web:8000/
