build: Implementing dynamic Apache configuration with environment variables.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,8 @@ CORS_ALLOW_ALL_ORIGINS=False
 
 BACKEND_URL='http://localhost:8000'
 
+SERVER_NAME='localhost'
+
 USE_POSTGRESQL=False
 
 # Database Configurations
